# YAML_Lib

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  YAML_Config.h.in  notes.txt  stdafx.h
classes/include/: YAML.hpp  YAML_Config.hpp  YAML_Core.hpp
classes/include/implementation/: YAML_Core.hpp  YAML_Impl.hpp
classes/include/implementation/common/: YAML_Arena.hpp  YAML_Error.hpp  YAML_SAX.hpp  YAML_Schema.hpp
classes/include/implementation/converter/: YAML_Converter.hpp
classes/include/implementation/io/: YAML_BufferDestination.hpp  YAML_BufferSource.hpp  YAML_BufferedSourceBase.hpp  YAML_CallbackDestination.hpp  YAML_Destinations.hpp  YAML_FileDestination.hpp  YAML_FileSource.hpp  YAML_FixedDestination.hpp  YAML_Sources.hpp  YAML_SpanSource.hpp  YAML_StreamDestination.hpp  YAML_StreamSource.hpp
classes/include/implementation/node/: YAML_Node.hpp  YAML_Node_Creation.hpp  YAML_Node_Index.hpp  YAML_Node_Reference.hpp
classes/include/implementation/parser/: Default_Parser.hpp  YAML_Parser.hpp
classes/include/implementation/stringify/: Bencode_Stringify.hpp  Default_Stringify.hpp  JSON_Stringify.hpp  XML_Stringify.hpp  YAML_Stringify.hpp  YAML_Stringify_Helper.hpp
classes/include/interface/: IAction.hpp  IDestination.hpp  IParser.hpp  ISource.hpp  IStringify.hpp  ITranslator.hpp  YAML_Interfaces.hpp
classes/source/: YAML.cpp  YAML_Utility.cpp
classes/source/implementation/: YAML_Error.cpp  YAML_Impl.cpp
classes/sources/: YAML.cpp
docs/: DRY_REFACTORING_PLAN.md  DRY_REFACTORING_PLAN_10.md  DRY_REFACTORING_PLAN_4.md  DRY_REFACTORING_PLAN_8.md  PARSER_FEATURES_AND_PLAN.md  YAML_1_2_COMPLIANCE_PLAN.md  api.md  guide.md  public_api.md
examples/: CMakeLists.txt
examples/files/: app_config.yaml  employees.yaml  file001.yaml  file007.yaml  file008.yaml
examples/include/: YAML_Analyzer.hpp  YAML_Utility.hpp
examples/source/: YAML_Advanced_Types_Demo.cpp  YAML_Analyze_File.cpp  YAML_Config_Manager.cpp  YAML_Create_At_Runtime.cpp  YAML_Error_Handling_Demo.cpp  YAML_Fibonacci.cpp  YAML_Files_To_Bencode.cpp  YAML_Files_To_JSON.cpp  YAML_Files_To_XML.cpp  YAML_Nested_Structure_Demo.cpp  YAML_Parse_File.cpp  YAML_Record_Query.cpp  YAML_Simple_Read_Write.cpp
notes/: DRY_REFACTORING_PLAN_11.md  DRY_REFACTORING_PLAN_12.md  DRY_REFACTORING_PLAN_3.md  DRY_REFACTORING_PLAN_5.md  DRY_REFACTORING_PLAN_6.md  DRY_REFACTORING_PLAN_7.md  DRY_REFACTORING_PLAN_9.md  EMBEDDED_PLAN.md  PERF_SIZE_PLAN.md  SIZE_PERFORMANCE_PLAN.md  attributes.md  attributes_refactor_plan.md  refactor_plan.md
scripts/: Linux-Build.sh  Linux-Run-Tests.sh
tests/: CMakeLists.txt
tests/files/: testfile000.yaml  testfile001.yaml  testfile002.yaml  testfile003.yaml  testfile004.yaml  testfile006.yaml  testfile007.yaml  testfile009.yaml  testfile017.yaml  testfile022.yaml  testfile026.yaml  testfile027.yaml  testfile028.yaml  testfile029.yaml  testfile030.yaml  testfile031.yaml  testfile032.yaml  testfile033.yaml  testfile034.yaml  testfile035.yaml  testfile036.yaml
tests/include/: YAML_Lib_Tests.hpp
tests/source/: YAML_Lib_Tests_YAML.cpp
tests/source/document/: YAML_Lib_Tests_Document.cpp  YAML_Lib_Tests_YAML_Document.cpp
tests/source/io/: YAML_Lib_Tests_File_FromFile.cpp  YAML_Lib_Tests_File_GetFormat.cpp  YAML_Lib_Tests_File_ToFile.cpp  YAML_Lib_Tests_IDestination_Buffer.cpp  YAML_Lib_Tests_IDestination_File.cpp  YAML_Lib_Tests_IDestination_Stream.cpp  YAML_Lib_Tests_ISource_Buffer.cpp  YAML_Lib_Tests_ISource_File.cpp  YAML_Lib_Tests_ISource_Stream.cpp
tests/source/misc/: YAML_Lib_Tests_Helper.cpp  YAML_Lib_Tests_Options.cpp  YAML_Lib_Tests_Phase3.cpp  YAML_Lib_Tests_SAX.cpp  YAML_Lib_Tests_Schema.cpp
tests/source/node/: YAML_Lib_Tests_Node_Assignment.cpp  YAML_Lib_Tests_Node_Construct.cpp  YAML_Lib_Tests_Node_Indexing.cpp  YAML_Lib_Tests_Node_Reference.cpp
tests/source/number/: YAML_Lib_Tests_Number_Assignment.cpp  YAML_Lib_Tests_Number_Conversion.cpp  YAML_Lib_Tests_Number_Misc.cpp  YAML_Lib_Tests_Number_Notation.cpp  YAML_Lib_Tests_Number_Precision.cpp
tests/source/parse/: YAML_Lib_Tests_Parse.cpp  YAML_Lib_Tests_Parse_Anchors.cpp  YAML_Lib_Tests_Parse_Anchors_Extended.cpp  YAML_Lib_Tests_Parse_Array.cpp  YAML_Lib_Tests_Parse_Boolean.cpp  YAML_Lib_Tests_Parse_Collections.cpp  YAML_Lib_Tests_Parse_Comment.cpp  YAML_Lib_Tests_Parse_Dictionary.cpp  YAML_Lib_Tests_Parse_Directives.cpp  YAML_Lib_Tests_Parse_ErrorHandling.cpp  YAML_Lib_Tests_Parse_Misc.cpp  YAML_Lib_Tests_Parse_Numeric.cpp  YAML_Lib_Tests_Parse_Sequence_Mapping.cpp  YAML_Lib_Tests_Parse_SpecCompliance.cpp  YAML_Lib_Tests_Parse_String.cpp  YAML_Lib_Tests_Parse_Tags.cpp  YAML_Lib_Tests_Parse_Timestamp.cpp  YAML_Lib_Tests_Parse_Unicode_Escapes.cpp  YAML_Lib_Tests_Parse_YamlTestSuite.cpp  YAML_Lib_Tests_YAML.cpp  YAML_Lib_Tests_YAML_Parse.cpp  YAML_Lib_Tests_YAML_Parse_Anchors.cpp  YAML_Lib_Tests_YAML_Parse_Array.cpp  YAML_Lib_Tests_YAML_Parse_Boolean.cpp  YAML_Lib_Tests_YAML_Parse_Comment.cpp  YAML_Lib_Tests_YAML_Parse_Dictionary.cpp  YAML_Lib_Tests_YAML_Parse_Misc.cpp  YAML_Lib_Tests_YAML_Parse_Null.cpp  YAML_Lib_Tests_YAML_Parse_Numeric.cpp  YAML_Lib_Tests_YAML_Parse_Object.cpp  YAML_Lib_Tests_YAML_Parse_Sequence_Mapping.cpp  YAML_Lib_Tests_YAML_Parse_Simple.cpp  YAML_Lib_Tests_YAML_Parse_String.cpp
tests/source/stringify/: YAML_Lib_Tests_Stringify.cpp  YAML_Lib_Tests_Stringify_Bencode.cpp  YAML_Lib_Tests_Stringify_JSON.cpp  YAML_Lib_Tests_Stringify_RoundTrip.cpp  YAML_Lib_Tests_Stringify_XML.cpp  YAML_Lib_Tests_YAML_Stringify.cpp
tests/source/traverse/: YAML_Lib_Tests_Traverse.cpp
tests/source/yaml/: YAML_Lib_Tests_Create_Array.cpp  YAML_Lib_Tests_Create_Complex.cpp  YAML_Lib_Tests_Create_Dictionary.cpp  YAML_Lib_Tests_YAML.cpp  YAML_Lib_Tests_YAML_Create_Array.cpp  YAML_Lib_Tests_YAML_Create_Complex.cpp  YAML_Lib_Tests_YAML_Create_Dictionary.cpp  YAML_Lib_Tests_YAML_Create_Simple.cpp
tests/source/ynode/: YAML_Lib_Tests_YNode_Assignment.cpp  YAML_Lib_Tests_YNode_Construct.cpp  YAML_Lib_Tests_YNode_Indexing.cpp  YAML_Lib_Tests_YNode_Reference.cpp
(+47 files in other folders)
